[package]
name = "conquer-util"
version = "0.1.0"
authors = ["Oliver Giersch <oliver.giersch@b-tu.de>"]
edition = "2018"

[features]
default  = ["std"]

std      = []

align    = []
alloc    = []
back-off = ["rand"]
tls      = []

[dependencies.rand]
version = "0.7.0"
optional = true
default-features = false
features = ["small_rng"]

[[bench]]
name = "backoff"
required-features = ["back-off"]

[package.metadata.docs.rs]
all-features = true
