[package]
name = "conquer-util"
version = "0.1.0"
authors = ["Oliver Giersch"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oliver-giersch/conquer-util.git"
documentation = "https://docs.rs/conquer-util"
keywords = ["concurrent", "lock-free", "utilities"]
edition = "2018"
exclude = [".travis.yml"]

[features]
default  = ["std"]

std      = []

align    = []
alloc    = []
back-off = ["rand"]
tls      = []

[dependencies.rand]
version = "0.7.0"
optional = true
default-features = false
features = ["small_rng"]

[[bench]]
name = "backoff"
required-features = ["back-off"]

[package.metadata.docs.rs]
all-features = true
